[gd_scene load_steps=6 format=3 uid="uid://e6g6ya01rpcg"]

[ext_resource type="Script" path="res://Weapons/MeleeWeapons/MeleeGear/MeleeGear.gd" id="1_2kj4h"]
[ext_resource type="Resource" uid="uid://df0438332cn4i" path="res://Weapons/MeleeWeapons/MeleeGear/MeleeGear.tres" id="2_tph33"]
[ext_resource type="ArrayMesh" uid="uid://r7gsec65ap5c" path="res://Assets/Kenney/Weapon Pack/Models/grenadeSmoke.obj" id="3_1ark3"]
[ext_resource type="PackedScene" uid="uid://dssdcm68rsihr" path="res://Weapons/MeleeWeapons/MeleeGear/MeleeGearBullet.tscn" id="3_nq6br"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q72rh"]
size = Vector3(0.35437, 0.394434, 0.25)

[node name="MeleeGear" type="Node3D" groups=["melee"]]
script = ExtResource("1_2kj4h")
weapon_stats = ExtResource("2_tph33")
bullet = ExtResource("3_nq6br")

[node name="WeaponSkin" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.00876509, 0)
mesh = ExtResource("3_1ark3")

[node name="HitboxArea" type="Area3D" parent="."]
monitoring = false
monitorable = false

[node name="HitboxCollision" type="CollisionShape3D" parent="HitboxArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00569654, 0.057688, 0)
shape = SubResource("BoxShape3D_q72rh")

[node name="ParryTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="HitboxArea" to="." method="_on_hitbox_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
